@@ -3,6 +3,7 @@ munin (1.1.6)
   * Failsafe entry for @@PYTHON@@.
   * Bugfix in munin-limits (it didn't work properly).
   * Added separate makefile target to take care of SNMP-only items.
+  * Allow floating point values in warning/critical limits.
 
 munin (1.1.5)
 
